[tool.poetry]
name = "vm-dns-test"
version = "0.1.0"
description = ""
authors = ["shadeofblue <blue@golem.network>"]
license = "GNU GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dnspython = "^2.4.2"
colorful = "^0.5.6"
yapapi = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
